
ChangeLog
 [ + added, - removed, * changed ]
 * 15Dec2014 Fix CUDA+MPI+OpenMP instrumentation library
 * 12Dec2014 Upgraded DLB support
 * 04Dec2014 Fixed PCF labels regarding OpenSHMEM, they don't appear now if
             there's no SHMEM events in the trace
 + 03Dec2014 Adding list-functions DynInst based tool (not installed)
             Improve detection for libiberty & libbfd within binutils package
             Add minimal support for aarch64 (ARM64)
 + 19Nov2014 Recorded events for bytes sent/received via SHMEM calls
             Added new states for SHMEM operations
	     Now emmitting callers at the entry of SHMEM calls
 * 18Nov2014 Fixed bug in *Distribute_XML routines that caused sporadic crashes
 * 17Nov2014 Fixed time synchronization and running states in shmem traces 
             Added configure parameters to specify the OpenSHMEM dependencies
	     --with-openshmem-deps-libsdir and --with-openshmem-deps-libs
 + 14Nov2014 Added 'wrapgen' script to generate lists of wrappers/probes automatically
 * 03Nov2014 Fix capturing >1k function names through binutils
             Added instrumentation for:
               MPI_Win_post, MPI_Win_complete, MPI_Win_wait
	     Fixed bug in the initialization of the on-line gremlins   
 + 31Oct2014 Added instrumentation for:
               MPI_Win_create, MPI_Win_free, MPI_Win_start, MPI_Win_fence
             Fix ordering in ROW file / objects in .prv
 * 30Oct2014 Fixed the DistributeWork routine to support dynamic threads per task.
             Fixed the Search_Synchronization_Point routine to support the different distribution methods (block, cyclic, size...)
             Upgraded to v3.0.3.
 * 16Oct2014 Added configuration options for the gremlins analysis. 
	     Also changed the initialization of the gremlins.
 * 09Oct2014 Added interface for libgomp 4.9. 
	     Added configure parameter '--with-libgomp-version' to choose the interface. 